Complete meta info in cargo.toml

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,8 @@
 name = "oxanus"
 version = "0.1.0"
 edition = "2024"
+license = "MIT"
+description = "A simple & fast job queue system."
 
 [dependencies]
 async-trait = "0.1"
