--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,13 +13,9 @@ test = true
 async-trait = "0.1"
 chrono = { version = "^0.4", features = ["serde"] }
 cron = "^0.15"
+deadpool-redis = "^0.21"
 futures = { version = "^0.3" }
 gethostname = "^1.0"
-redis = { version = "^0.32", features = [
-  "connection-manager",
-  "tcp_nodelay",
-  "tokio-comp",
-] }
 serde = { version = "^1.0", features = ["derive"] }
 serde_json = { version = "^1.0", features = ["preserve_order"] }
 thiserror = "^2.0"
