--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,13 @@
 [package]
 name = "oxanus"
-version = "0.3.3"
+version = "0.3.4"
 edition = "2024"
 license = "MIT"
 description = "A simple & fast job queue system."
+repository = "https://github.com/oxanus/oxanus"
+keywords = ["job", "task", "scheduler", "worker", "cron", "queue"]
+categories = ["asynchronous", "web-programming", "concurrency"]
+exclude = [".*", "logo.jpg"]
 
 [lib]
 doctest = false
