--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2024"
 license = "MIT"
 description = "A simple & fast job queue system."
 repository = "https://github.com/oxanus/oxanus"
-keywords = ["job", "task", "scheduler", "worker", "cron", "queue"]
+keywords = ["job", "scheduler", "worker", "cron"]
 categories = ["asynchronous", "web-programming", "concurrency"]
 exclude = [".*", "logo.jpg"]
 
