--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -33,7 +33,7 @@ jobs:
           tool: nextest
 
       - name: Test
-        run: cargo nextest run --no-fail-fast
+        run: cargo nextest run --all-features --no-fail-fast
 
       - name: Lint
         run: cargo clippy --all-features
