--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ cron = "^0.15"
 deadpool-redis = "^0.21"
 futures = { version = "^0.3" }
 gethostname = "^1.0"
+memory-stats = "1.0.0"
 sentry-core = { version = "^0.41", optional = true }
 serde = { version = "^1.0", features = ["derive"] }
 serde_json = { version = "^1.0", features = ["preserve_order"] }
