--- a/oxanus/Cargo.toml
+++ b/oxanus/Cargo.toml
@@ -23,6 +23,7 @@ async-trait = "0.1"
 chrono = { version = "^0.4", features = ["serde"] }
 cron = "^0.15"
 deadpool-redis = "^0.22"
+redis = { version = "0.32.5", features = ["safe_iterators"] }
 futures = { version = "^0.3" }
 gethostname = "^1.0"
 sentry-core = { version = "^0.42", optional = true }
