Move repo to pragmaplatform org

--- a/oxanus/Cargo.toml
+++ b/oxanus/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.5.3"
 edition = "2024"
 license = "MIT"
 description = "A simple & fast job queue system."
-repository = "https://github.com/oxanus/oxanus"
+repository = "https://github.com/pragmaplatform/oxanus"
 keywords = ["job", "scheduler", "worker", "cron"]
 categories = ["asynchronous", "web-programming", "concurrency"]
 exclude = [".*", "logo.jpg"]
