--- a/oxanus/Cargo.toml
+++ b/oxanus/Cargo.toml
@@ -23,11 +23,11 @@ async-trait = "0.1"
 chrono = { version = "^0.4", features = ["serde"] }
 cron = "^0.15"
 deadpool-redis = "^0.22"
-redis = { version = "0.32.5", features = ["safe_iterators"] }
+redis = { version = "^1.0", features = ["aio", "tokio-comp"] }
 futures = { version = "^0.3" }
 gethostname = "^1.0"
 sentry-core = { version = "^0.46", optional = true }
-serde = { version = "^1.0", features = ["derive"] }
+serde = { version = "^1.0.218", features = ["derive"] }
 serde_json = { version = "^1.0", features = ["preserve_order"] }
 thiserror = "^2.0"
 tokio = { version = "^1.46", features = ["full"] }
